feat: add auth and OTP to user onboarding

--- a/.env
+++ b/.env
@@ -15,3 +15,4 @@ GOOGLE_CLIENT_SECRET=
 
 # =========RESEND=================
 RESEND_API_KEY=re_SqHfZBWw_DeduA9DgyKwCZBiDBM66wNnR
+NEXT_PUBLIC_RESEND_EMAIL_ADDRESS=kamasahdickson@animalsking.com
